rearrange files structure

--- a/src/sass/modules/_settings.scss
+++ b/src/sass/modules/_settings.scss
@@ -1,13 +1,5 @@
-@import url(https://fonts.googleapis.com/css?family=Oswald);
-
-$colors: (
-  'bg'     : #333,
-  'txt'    : #ddd,
-  'acc'    : #ffd800,
-  'red'    : #9a3131
-);
-
-@function getColor($key){
-  @return map-get($colors, $key);
-}
-
+$color1: #244F75;
+$color2: #60BFBF;
+$color3: #8C4B7E;
+$color4: #F8BB44;
+$color5: #F24B4B;
