--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -1,10 +1,11 @@
-@import url(https://fonts.googleapis.com/css?family=Oswald);
-html, body {
-  background: #333;
-  color: #ddd; }
-
 * {
   box-sizing: border-box; }
+
+html, body {
+  background: #fff;
+  color: #333;
+  margin: 0;
+  padding: 0; }
 
 .strips {
   min-height: 100vh;
