--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,5 +1,6 @@
 @import './modules/settings';
 @import './modules/mixins';
+@import './modules/animation';
 
 @import './modules/core';
 @import './modules/layout';
