remove font-awesome from layout

--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -108,6 +108,12 @@ h2 {
 p {
   margin: 0 0 16px; }
 
+.app-container {
+  position: relative; }
+
+.sidebar {
+  position: absolute; }
+
 .strips {
   min-height: 100vh;
   text-align: center;
@@ -287,6 +293,9 @@ p {
   z-index: 10;
   transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
   cursor: pointer;
-  transition-delay: 0.5s; }
+  transition-delay: 0.5s;
+  display: block;
+  width: 16px;
+  height: 16px; }
   .strip__close--show {
     opacity: 1; }
