--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -109,16 +109,22 @@ p {
   margin: 0 0 16px; }
 
 .app-container {
-  position: relative; }
+  position: relative;
+  width: 100vw;
+  height: 100vh; }
 
 .sidebar {
-  position: absolute; }
+  height: 100%;
+  width: 2rem;
+  background: #fff;
+  float: left; }
 
 .strips {
   min-height: 100vh;
   text-align: center;
   overflow: hidden;
-  color: white; }
+  color: white;
+  position: relative; }
   .strips__strip {
     will-change: width, left, z-index, height;
     position: absolute;
@@ -130,13 +136,13 @@ p {
     .strips__strip:nth-child(1) {
       left: 0; }
     .strips__strip:nth-child(2) {
-      left: 20vw; }
+      left: 20%; }
     .strips__strip:nth-child(3) {
-      left: 40vw; }
+      left: 40%; }
     .strips__strip:nth-child(4) {
-      left: 60vw; }
+      left: 60%; }
     .strips__strip:nth-child(5) {
-      left: 80vw; }
+      left: 80%; }
     .strips__strip:nth-child(1) .strip__content {
       background: #244F75;
       -webkit-transform: translate3d(-100%, 0, 0);
