--- a/src/sass/modules/_settings.scss
+++ b/src/sass/modules/_settings.scss
@@ -1,9 +1,15 @@
-$color1: #244F75;
-$color2: #60BFBF;
-$color3: #8C4B7E;
-$color4: #F8BB44;
-$color5: #F24B4B;
+// $color1: #244F75;
+// $color2: #60BFBF;
+// $color3: #8C4B7E;
+// $color4: #F8BB44;
+// $color5: #F24B4B;
+$color1: #2F4858;
+$color2: #33658A;
+$color3: #86BBD8;
+$color4: #F6AE2D;
+$color5: #F26419;
 
 $color-panel: #fff;
 
 $sidebar-width: 2rem;
+$breakTablet: 760px;
