--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -108,6 +108,19 @@ h2 {
 p {
   margin: 0 0 16px; }
 
+.btn-ic {
+  display: block;
+  width: 1rem;
+  height: 1rem; }
+
+.btn-hamburger {
+  margin: .5rem auto;
+  cursor: pointer;
+  opacity: .89;
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1); }
+  .btn-hamburger:hover {
+    opacity: 1; }
+
 .app-container {
   position: relative;
   width: 100vw;
@@ -120,7 +133,7 @@ p {
   float: left; }
 
 .strips {
-  min-height: 100vh;
+  min-height: 100%;
   text-align: center;
   overflow: hidden;
   color: white;
@@ -129,154 +142,155 @@ p {
     will-change: width, left, z-index, height;
     position: absolute;
     width: 20%;
-    min-height: 100vh;
+    min-height: 100%;
     overflow: hidden;
     cursor: pointer;
     transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1); }
     .strips__strip:nth-child(1) {
       left: 0; }
+      .strips__strip:nth-child(1) .strip__content {
+        background: #2F4858;
+        -webkit-transform: translate3d(-100%, 0, 0);
+        transform: translate3d(-100%, 0, 0);
+        -webkit-animation-name: strip1;
+        animation-name: strip1;
+        -webkit-animation-delay: 0.1s;
+        animation-delay: 0.1s; }
     .strips__strip:nth-child(2) {
       left: 20%; }
+      .strips__strip:nth-child(2) .strip__content {
+        background: #33658A;
+        -webkit-transform: translate3d(0, 100%, 0);
+        transform: translate3d(0, 100%, 0);
+        -webkit-animation-name: strip2;
+        animation-name: strip2;
+        -webkit-animation-delay: 0.2s;
+        animation-delay: 0.2s; }
     .strips__strip:nth-child(3) {
       left: 40%; }
+      .strips__strip:nth-child(3) .strip__content {
+        background: #86BBD8;
+        -webkit-transform: translate3d(0, -100%, 0);
+        transform: translate3d(0, -100%, 0);
+        -webkit-animation-name: strip3;
+        animation-name: strip3;
+        -webkit-animation-delay: 0.3s;
+        animation-delay: 0.3s; }
     .strips__strip:nth-child(4) {
       left: 60%; }
+      .strips__strip:nth-child(4) .strip__content {
+        background: #F6AE2D;
+        -webkit-transform: translate3d(0, 100%, 0);
+        transform: translate3d(0, 100%, 0);
+        -webkit-animation-name: strip4;
+        animation-name: strip4;
+        -webkit-animation-delay: 0.4s;
+        animation-delay: 0.4s; }
     .strips__strip:nth-child(5) {
       left: 80%; }
-    .strips__strip:nth-child(1) .strip__content {
-      background: #244F75;
-      -webkit-transform: translate3d(-100%, 0, 0);
-      transform: translate3d(-100%, 0, 0);
-      -webkit-animation-name: strip1;
-      animation-name: strip1;
-      -webkit-animation-delay: 0.1s;
-      animation-delay: 0.1s; }
-    .strips__strip:nth-child(2) .strip__content {
-      background: #60BFBF;
-      -webkit-transform: translate3d(0, 100%, 0);
-      transform: translate3d(0, 100%, 0);
-      -webkit-animation-name: strip2;
-      animation-name: strip2;
-      -webkit-animation-delay: 0.2s;
-      animation-delay: 0.2s; }
-    .strips__strip:nth-child(3) .strip__content {
-      background: #8C4B7E;
-      -webkit-transform: translate3d(0, -100%, 0);
-      transform: translate3d(0, -100%, 0);
-      -webkit-animation-name: strip3;
-      animation-name: strip3;
-      -webkit-animation-delay: 0.3s;
-      animation-delay: 0.3s; }
-    .strips__strip:nth-child(4) .strip__content {
-      background: #F8BB44;
-      -webkit-transform: translate3d(0, 100%, 0);
-      transform: translate3d(0, 100%, 0);
-      -webkit-animation-name: strip4;
-      animation-name: strip4;
-      -webkit-animation-delay: 0.4s;
-      animation-delay: 0.4s; }
-    .strips__strip:nth-child(5) .strip__content {
-      background: #F24B4B;
-      -webkit-transform: translate3d(100%, 0, 0);
-      transform: translate3d(100%, 0, 0);
-      -webkit-animation-name: strip5;
-      animation-name: strip5;
-      -webkit-animation-delay: 0.5s;
-      animation-delay: 0.5s; }
+      .strips__strip:nth-child(5) .strip__content {
+        background: #F26419;
+        -webkit-transform: translate3d(100%, 0, 0);
+        transform: translate3d(100%, 0, 0);
+        -webkit-animation-name: strip5;
+        animation-name: strip5;
+        -webkit-animation-delay: 0.5s;
+        animation-delay: 0.5s; }
     @media screen and (max-width: 760px) {
       .strips__strip {
-        min-height: 20vh; }
+        min-height: 20%; }
         .strips__strip:nth-child(1) {
           top: 0;
           left: 0;
           width: 100%; }
         .strips__strip:nth-child(2) {
-          top: 20vh;
+          top: 20%;
           left: 0;
           width: 100%; }
         .strips__strip:nth-child(3) {
-          top: 40vh;
+          top: 40%;
           left: 0;
           width: 100%; }
         .strips__strip:nth-child(4) {
-          top: 60vh;
+          top: 60%;
           left: 0;
           width: 100%; }
         .strips__strip:nth-child(5) {
-          top: 80vh;
+          top: 80%;
           left: 0;
           width: 100%; } }
-  .strips .strip__content {
-    -webkit-animation-duration: 1s;
-    animation-duration: 1s;
-    -webkit-animation-timing-function: cubic-bezier(0.23, 1, 0.32, 1);
-    animation-timing-function: cubic-bezier(0.23, 1, 0.32, 1);
-    -webkit-animation-fill-mode: both;
-    animation-fill-mode: both;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
+
+.strips .strip__content {
+  -webkit-animation-duration: .5s;
+  animation-duration: .5s;
+  -webkit-animation-timing-function: cubic-bezier(0.23, 1, 0.32, 1);
+  animation-timing-function: cubic-bezier(0.23, 1, 0.32, 1);
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  text-decoration: none; }
+  .strips .strip__content:hover:before {
+    -webkit-transform: skew(-30deg) scale(3) translate(0, 0);
+    transform: skew(-30deg) scale(3) translate(0, 0);
+    opacity: 0.1; }
+  .strips .strip__content:before {
+    content: "";
     position: absolute;
+    z-index: 1;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    text-decoration: none; }
-    .strips .strip__content:hover:before {
-      -webkit-transform: skew(-30deg) scale(3) translate(0, 0);
-      transform: skew(-30deg) scale(3) translate(0, 0);
-      opacity: 0.1; }
-    .strips .strip__content:before {
-      content: "";
-      position: absolute;
-      z-index: 1;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: white;
-      opacity: 0.05;
-      -webkit-transform-origin: center center;
-      transform-origin: center center;
-      -webkit-transform: skew(-30deg) scaleY(1) translate(0, 0);
-      transform: skew(-30deg) scaleY(1) translate(0, 0);
-      transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1); }
-  .strips .strip__inner-text {
-    will-change: transform, opacity;
-    position: absolute;
-    z-index: 5;
-    top: 50%;
-    left: 50%;
-    width: 70%;
-    -webkit-transform: translate(-50%, -50%) scale(0.5);
-    transform: translate(-50%, -50%) scale(0.5);
-    opacity: 0;
+    background: white;
+    opacity: 0.05;
+    -webkit-transform-origin: center center;
+    transform-origin: center center;
+    -webkit-transform: skew(-30deg) scaleY(1) translate(0, 0);
+    transform: skew(-30deg) scaleY(1) translate(0, 0);
     transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1); }
-  .strips__strip--expanded {
-    width: 100%;
-    top: 0 !important;
-    left: 0 !important;
-    z-index: 3;
-    cursor: default; }
-    @media screen and (max-width: 760px) {
-      .strips__strip--expanded {
-        min-height: 100vh; } }
-    .strips__strip--expanded .strip__content:hover:before {
-      -webkit-transform: skew(-30deg) scale(1) translate(0, 0);
-      transform: skew(-30deg) scale(1) translate(0, 0);
-      opacity: 0.05; }
-    .strips__strip--expanded .strip__title {
-      opacity: 0; }
-    .strips__strip--expanded .strip__inner-text {
-      opacity: 1;
-      -webkit-transform: translate(-50%, -50%) scale(1);
-      transform: translate(-50%, -50%) scale(1); }
+
+.strips .strip__inner-text {
+  will-change: transform, opacity;
+  position: absolute;
+  z-index: 5;
+  top: -50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: all 0.36s cubic-bezier(0.23, 1, 0.32, 1); }
+
+.strips__strip--expanded {
+  width: 100%;
+  top: 0 !important;
+  left: 0 !important;
+  cursor: default;
+  transition: all .25s .25s ease; }
+  @media screen and (max-width: 760px) {
+    .strips__strip--expanded {
+      min-height: 100vh; } }
+  .strips__strip--expanded .strip__content:hover:before {
+    -webkit-transform: skew(-30deg) scale(1) translate(0, 0);
+    transform: skew(-30deg) scale(1) translate(0, 0);
+    opacity: 0.05; }
+  .strips__strip--expanded .strip__title {
+    opacity: 0; }
+  .strips__strip--expanded .strip__inner-text {
+    top: 50%;
+    opacity: 1; }
 
 .strip__title {
   display: block;
@@ -299,7 +313,6 @@ p {
   z-index: 10;
   transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
   cursor: pointer;
-  transition-delay: 0.5s;
   display: block;
   width: 16px;
   height: 16px; }
