--- a/src/sass/modules/_core.scss
+++ b/src/sass/modules/_core.scss
@@ -36,3 +36,19 @@ h2 {
 p {
   margin: 0 0 16px;
 }
+
+.btn-ic {
+  display: block;
+  width: 1rem;
+  height: 1rem;
+}
+
+.btn-hamburger {
+  margin: .5rem auto;
+  cursor: pointer;
+  opacity: .89;
+  @include easeOut;
+  &:hover {
+    opacity: 1;
+  }
+}
