--- a/src/sass/modules/_mixins.scss
+++ b/src/sass/modules/_mixins.scss
@@ -3,7 +3,7 @@
 }
 
 @mixin break {
-  @media screen and (max-width: 760px) {
+  @media screen and (max-width: $breakTablet) {
     @content;
   }
 }
